--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,32 @@
 </head>
 <body>
     <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
+    <h1>This is the index view!</h1>
 </body>
 </html>
