--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,5 +34,12 @@
     <h1>This is the index view!</h1>
     <h1>This is the index view!</h1>
     <h1>This is the index view!</h1>
+    <button type="button" id="my-btn" name="button">Button!</button>
+    <script>
+      document.querySelector('#my-btn').addEventListener('click', function(){
+        console.log('click!');
+      })
+
+    </script>
 </body>
 </html>
